--- a/src/components/Brands.css
+++ b/src/components/Brands.css
@@ -1,16 +1,18 @@
 .brands {
-  display: grid;
-  grid-template-columns: repeat(6, minmax(0, 1fr));
-  gap: 20px;
   margin-bottom: 80px;
 
-  @screen max-lg {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-  @screen max-md {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
+  &__grid {
+    display: grid;
+    grid-template-columns: repeat(6, minmax(0, 1fr));
+    gap: 20px;
 
+    @screen max-lg {
+      grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+    @screen max-md {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
   &__item {
     padding: 15px;
     box-shadow: 0 0 0 1px rgb(0 0 0 / 10%);
