--- a/src/components/Features.css
+++ b/src/components/Features.css
@@ -1,19 +1,25 @@
 .features {
-  padding: 30px;
-  border: 1px solid #ebebeb;
-  display: grid;
-  gap: 30px;
-  grid-template-columns: repeat(4, minmax(0, 1fr));
   margin-bottom: 60px;
 
   @screen max-lg {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
     margin-bottom: 20px;
   }
-  @screen max-md {
-    grid-template-columns: minmax(0, 1fr);
-  }
 
+  &__list {
+    padding: 30px;
+    border: 1px solid #ebebeb;
+    display: grid;
+    gap: 30px;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+
+    @screen max-lg {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+      margin-bottom: 20px;
+    }
+    @screen max-md {
+      grid-template-columns: minmax(0, 1fr);
+    }
+  }
   &__item {
     display: flex;
     align-items: flex-start;
