--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   background-color: #333333;
   color: #cccccc;
-  margin-top: 90px;
+  /* margin-top: 100px; */
 
   &__top {
     display: grid;
