--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,6 @@
 .header {
+  box-shadow: 0 0 4px rgb(0 0 0 / 5%);
+
   @screen max-lg {
     padding-top: 54px;
   }
@@ -81,6 +83,7 @@
     display: block;
     color: #000;
     margin-bottom: 8px;
+    transition: all 200ms ease-out;
 
     &:hover {
       color: #f05a23;
@@ -89,6 +92,7 @@
   &__email {
     color: #f05a23;
     line-height: 1.3;
+    transition: all 200ms ease-out;
 
     &:hover {
       color: #000;
@@ -190,5 +194,38 @@
       top: -7px;
       min-width: 17px;
     }
+  }
+  &__search-button {
+    border: none;
+  }
+  &__dialog {
+    width: 560px;
+    max-width: 100%;
+    background: #fff;
+    border: none;
+    box-shadow: 0px 0px 14px 3px rgb(0 0 0 / 30%);
+    padding: 0;
+
+    &::backdrop {
+      pointer-events: none;
+      background-color: rgba(0, 0, 0, 0.8);
+    }
+  }
+}
+
+.close {
+  position: absolute;
+  border: none;
+  top: 20px;
+  right: 20px;
+  color: #333333;
+
+  &:hover {
+    color: #f05a23;
+  }
+
+  svg {
+    width: 17px;
+    fill: currentColor;
   }
 }
